Fixing issues on smaller screens

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -25,6 +25,8 @@
 			align-items: center;
 			justify-content: space-between;
 			gap: 2rem;
+			max-width: 50%;
+			margin: 0 auto;
 
 			& .header__nav__link {
 				display: inline-block;
